; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_set_protocol_version.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_set_protocol_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_err = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Error parsing: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32)* @set_protocol_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_protocol_version(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %3
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @protocol_from_string(i8* %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load i32, i32* @bio_err, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @BIO_printf(i32 %17, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %18)
  store i32 0, i32* %4, align 4
  br label %26

20:                                               ; preds = %11
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @SSL_ctrl(i32* %21, i32 %22, i32 %23, i32* null)
  store i32 %24, i32* %4, align 4
  br label %26

25:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %20, %16
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @protocol_from_string(i8*) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1

declare dso_local i32 @SSL_ctrl(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
